src/objects/UC_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Codes</relationshipLabel>
        <relationshipName>UC_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cornerstone_Grade__c</fullName>
        <label>Cornerstone Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Education Transcript</label>
        <referenceTo>Education_Transcript__c</referenceTo>
        <relationshipLabel>UC Contacts</relationshipLabel>
        <relationshipName>UC_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Grade__c</fullName>
        <formula>IF( ISNULL( Cornerstone_Grade__c ) , Grade__c,Cornerstone_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Certification grading for AP classes, loaded field</description>
        <inlineHelpText>Certification grading for AP classes, loaded field</inlineHelpText>
        <label>Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Shows the level of proficiency</description>
        <inlineHelpText>Shows the level of proficiency</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Universal_Code__c</fullName>
        <label>Universal Code</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>UC Contacts</relationshipLabel>
        <relationshipName>UC_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UC Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UC EM-{0000000}</displayFormat>
        <label>UC Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UC Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>